quick link jump fix

--- a/css/yabs.css
+++ b/css/yabs.css
@@ -198,7 +198,6 @@ ul#menu-primary li.current-menu-item a:hover, ul#menu-primary li.current-post-an
 }
 #player #featured_video_notes a:hover {
   color: #D27A20;
-  font-weight: bold;
   text-decoration: underline;
 }
 #player #featured_video_notes h3 {
